 * Fixing NULL dereference if server variable SSL_PROTOCOL is unset.
 * Setting DefaultRuntimeDir and PidFile in test configuration to override
   any platform defaults.
 * Disabling pollset use when compiling with APR version < 1.6.0

v2.0.0
--------------------------------------------------------------------------------
 * Fixed input handling for requests without body that nevertheless try
   to read one (e.g. mod_cgid handling) to deliver at least an EOS bucket
   before signalling an EOF.
 * A regression in v1.15.24 was fixed that could lead to httpd child
   processes not being terminated on a graceful reload or when reaching
   MaxConnectionsPerChild. When unprocessed h2 requests were queued at
   the time, these could stall. See #212.
 * Fixed an issue since 1.15.24 that "Server" headers in proxied requests
   were overwritten instead of preserved. [PR by @daum3ns]

v2.0.0-rc4
--------------------------------------------------------------------------------
 * fixing an uninitialized status code when pollsets are not used for streams.

v2.0.0-rc3
--------------------------------------------------------------------------------
 * Added an alternate implementation when polling of file descriptors is
   not supported by the OS. This is automatically detected via the APR
   header files, but can be enforces by adding '--disable-poll-streams'
   to the './configure' when building the module.
   This should allow the module to work on Windows again.

v2.0.0-rc2
--------------------------------------------------------------------------------
 * Switching from a thread-safe apr pollset (not supported under Windows) to
   a wakeable pollset implementation.
 * Adding a clear error in the logs if the pollset could not be created.

v2.0.0-rc1
--------------------------------------------------------------------------------
 * HTTP/2 connections now use pollsets to monitor the status of the
   ongoing streams and their main connection.